# content-based-image-retrieval

./: .gitignore  CMakeLists.txt  README.md  csv_util.cpp  csv_util.h  directory.cpp  directory.h  distance.cpp  distance.h  features.cpp  features.h  filters.cpp  filters.h  target.cpp
demo/: tutorial.cpp
